# nuforc

./: .gitignore  NUFORC_geocoding.ipynb  README.md  SETTINGS.py  geocode.py  pyproject.toml  requirements.txt  run.py
docs/: conf.py  index.rst
model/dashboard/: app.py
model/modules/: geocoding.py  models.py  regexes.py  scraping.py  utility.py  wrangling.py
notebooks/: NUFORC_geocoding.ipynb  NUFORC_geocoding.py  NUFORC_randomizing_locations.ipynb  NUFORC_randomizing_locations.py  hashing.ipynb  hashing.py  randomizing_locations.ipynb  randomizing_locations.py
nuforc_scrapy/: items.json  nuforc.csv  scrapy.cfg
nuforc_scrapy/nuforc_scrapy/: items.py  middlewares.py  pipelines.py  settings.py
nuforc_scrapy/nuforc_scrapy/spiders/: nuforc_spider.py  wrangling.py
src/nuforc/: SETTINGS.py  __init__.py  __main__.py  client.py  geocoding.py  regexes.py  scraping.py  utility.py  visualisation.py  wrangling.py
src/nuforc/dashboard/: app.py
src/nuforc/geocoding/: geocoder.py  wrangling.py
src/nuforc/lookups/: geography_lookups.py
src/nuforc/models/: events.py  pages.py
src/nuforc/modules/: geocoding.py  scraping.py  wrangling.py
tests/: test_nuforc.py
